Fix z-index issue in stream

--- a/src/sentry/static/sentry/less/sentry.less
+++ b/src/sentry/static/sentry/less/sentry.less
@@ -1565,7 +1565,6 @@ a.icon-share {
   .list-unstyled;
 
   .group {
-    z-index: 1;
     position: relative;
     border-bottom: 1px solid rgba(52, 60, 69, .08);
     margin: 0;
@@ -1713,7 +1712,7 @@ a.icon-share {
   .event-assignee {
     color: #B5B9BD;
     padding-top: 26px;
-    
+
     .dropdown-menu {
       right: 0px;
       top: 32px;
